@@ -1,9 +1,18 @@
 package org.folio.marc4ld.mapper.field340;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.folio.ld.dictionary.PredicateDictionary.INSTANTIATES;
+import static org.folio.ld.dictionary.PredicateDictionary.IS_DEFINED_BY;
+import static org.folio.ld.dictionary.PropertyDictionary.BOOK_FORMAT;
+import static org.folio.ld.dictionary.PropertyDictionary.CODE;
+import static org.folio.ld.dictionary.PropertyDictionary.LABEL;
+import static org.folio.ld.dictionary.PropertyDictionary.LINK;
+import static org.folio.ld.dictionary.PropertyDictionary.SOURCE;
+import static org.folio.ld.dictionary.PropertyDictionary.TERM;
 import static org.folio.ld.dictionary.ResourceTypeDictionary.CATEGORY;
 import static org.folio.ld.dictionary.ResourceTypeDictionary.CATEGORY_SET;
 import static org.folio.ld.dictionary.ResourceTypeDictionary.INSTANCE;
+import static org.folio.marc4ld.mapper.test.MonographTestUtil.createWorkBook;
 import static org.folio.marc4ld.mapper.test.TestUtil.loadResourceAsString;
 
 import java.util.Collections;
@@ -11,7 +20,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import org.folio.ld.dictionary.PredicateDictionary;
-import org.folio.ld.dictionary.PropertyDictionary;
 import org.folio.ld.dictionary.model.Resource;
 import org.folio.marc4ld.mapper.test.MonographTestUtil;
 import org.folio.marc4ld.mapper.test.SpringTestConfig;
@@ -51,15 +59,14 @@ class LdToMarc340IT {
     var result = ld2MarcMapper.toMarcJson(instance);
 
     // then
-    assertThat(result)
-      .isEqualTo(expectedMarc);
+    assertThat(result).isEqualTo(expectedMarc);
   }
 
   private Resource createInstanceWithBookFormatCategory() {
     var categorySet = MonographTestUtil.createResource(
       Map.of(
-        PropertyDictionary.LINK, List.of("http://id.loc.gov/vocabulary/bookformat"),
-        PropertyDictionary.LABEL, List.of("Book Format")
+        LINK, List.of("http://id.loc.gov/vocabulary/bookformat"),
+        LABEL, List.of("Book Format")
       ),
       Set.of(CATEGORY_SET),
       Collections.emptyMap()
@@ -67,27 +74,27 @@ class LdToMarc340IT {
 
     var bookFormat = MonographTestUtil.createResource(
       Map.of(
-        PropertyDictionary.CODE, List.of("4to"),
-        PropertyDictionary.LINK, List.of("http://id.loc.gov/vocabulary/bookformat/4to"),
-        PropertyDictionary.TERM, List.of("4to."),
-        PropertyDictionary.SOURCE, List.of("rdabf")
+        CODE, List.of("4to"),
+        LINK, List.of("http://id.loc.gov/vocabulary/bookformat/4to"),
+        TERM, List.of("4to."),
+        SOURCE, List.of("rdabf")
       ),
       Set.of(CATEGORY),
-      Map.of(PredicateDictionary.IS_DEFINED_BY, List.of(categorySet))
+      Map.of(IS_DEFINED_BY, List.of(categorySet))
     ).setLabel("4to");
 
     return MonographTestUtil.createResource(
       Collections.emptyMap(),
       Set.of(INSTANCE),
-      Map.of(PredicateDictionary.BOOK_FORMAT, List.of(bookFormat))
+      Map.of(PredicateDictionary.BOOK_FORMAT, List.of(bookFormat), INSTANTIATES, List.of(createWorkBook()))
     );
   }
 
   private Resource createInstanceWithBookFormatString() {
     return MonographTestUtil.createResource(
-      Map.of(PropertyDictionary.BOOK_FORMAT, List.of("book format label.")),
+      Map.of(BOOK_FORMAT, List.of("book format label.")),
       Set.of(INSTANCE),
-      Collections.emptyMap()
+      Map.of(INSTANTIATES, List.of(createWorkBook()))
     );
   }
 }
